--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,9 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              {{ site.title | escape }}
+              I am an applied machine learning researcher at Samsung SDS America.
+              I obtained my Ph.D. from the University of Notre Dame and my B.Tech
+               from the Indian Institute of Technology(IIT), Madras.
             {% endif %}
             </li>
             {% if site.email %}
