--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-  
+
     {% if page_paths %}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -19,22 +19,22 @@
         </label>
 
         <div class="trigger">
-          {% if site.github_username %}
-            <a href="https://github.com/{{ site.github_username }}" title="GitHub" style="font-size:40px"; target="_blank">
-              <i class="fa fa-github"></i>
-            </a>
-          {% endif %}
-          {% if site.linkedin_username %}
-              <a href="https://linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn" style="font-size:40px"; target="_blank">
-                <i class="fa fa-linkedin"></i>
-              </a>
-          {% endif %}
-	  {% for path in page_paths %}
+          {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.title %}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {% endif %}
           {% endfor %}
+          {% if site.github_username %}
+            <a href="https://github.com/{{ site.github_username }}" title="GitHub" style="font-size:20px"; target="_blank">
+              <i class="fa fa-github">&nbsp;&nbsp;</i>
+            </a>
+          {% endif %}
+          {% if site.linkedin_username %}
+              <a href="https://linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn" style="font-size:20px"; target="_blank">
+                <i class="fa fa-linkedin"></i>
+              </a>
+          {% endif %}
         </div>
       </nav>
     {% endif %}
