--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,7 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              I am an applied machine learning researcher at Samsung SDS America.
-              I obtained my Ph.D. from the University of Notre Dame and my B.Tech
-               from the Indian Institute of Technology(IIT), Madras.
+              I am an applied AI researcher at Samsung SDS America, focusing on deep reinforcement learning.
             {% endif %}
             </li>
             {% if site.email %}
@@ -22,28 +20,31 @@
         </ul>
       </div>
 
+      <div class="footer-col footer-col-3">
+        I obtained my Ph.D. from the University of Notre Dame and my B.Tech
+         from the Indian Institute of Technology(IIT), Madras.
+        <p>{{ site.description | escape }}</p>
+      </div>
+
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
-          <li>
-    	    <a href="https://github.com/{{ site.github_username }}">
-	      <i class="fa fa-github"></i> GitHub
-	    </a>
-          </li>
+            <li>
+        	    <a href="https://github.com/{{ site.github_username }}">
+    	           <i class="fa fa-github"></i> GitHub
+    	        </a>
+            </li>
           {% endif %}
-	  {%if site.linkedin_username %}
-	    <li>
-	      <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-	        <i class="fa fa-linkedin"></i> LinkedIn
-	      </a>
-	    </li>
-	  {% endif %}
+      	  {%if site.linkedin_username %}
+      	    <li>
+      	      <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+      	        <i class="fa fa-linkedin"></i> LinkedIn
+      	      </a>
+      	    </li>
+      	  {% endif %}
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
-      </div>
     </div>
 
   </div>
