--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              I am an applied AI researcher at Samsung SDS America, focusing on deep reinforcement learning.
+              I am an applied AI researcher at Samsung SDS Research America, focusing on deep reinforcement learning.
             {% endif %}
             </li>
             {% if site.email %}
@@ -21,8 +21,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        I obtained my Ph.D. from the University of Notre Dame and my B.Tech
-         from the Indian Institute of Technology(IIT), Madras.
+        I obtained my M.S. and Ph.D. degrees from the University of Notre Dame and my B.Tech
+        degree from the Indian Institute of Technology (IIT), Madras.
         <p>{{ site.description | escape }}</p>
       </div>
 
