--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 
       <div class="footer-col footer-col-3">
         I obtained M.S. and Ph.D. degrees from the University of Notre Dame and a B.Tech
-        degree from the Indian Institute of Technology (IIT), Madras.
+        degree from the Indian Institute of Technology (IIT) Madras.
         <p>{{ site.description | escape }}</p>
       </div>
 
