--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              I am an applied AI researcher at Comcast Labs, focusing on deep reinforcement learning.
+              I am an applied AI researcher/software engineer at Comcast Labs.
             {% endif %}
             </li>
             {% if site.email %}
