--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
-              I am an AI Research Engineer at Salesforce.
+              I am an AI Research Engineer at Salesforce Research.
             {% endif %}
             </li>
             {% if site.email %}
